# plata

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  VERSION  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 20260525_0000_initial_schema.py  20260529_0000_add_llm_cost.py  20260601_0000_add_sysop_findings.py  20260608_0000_widen_proposals_symbol.py
docs/: ARCHITECTURE.md  PLATA_BRIEF.md  SPEC.md
inkcliq/: __init__.py  cli.py  entrypoints.py
inkcliq/agents/: base.py  executor.py  graph_ingestion.py  historian.py  orchestrator.py  reviewer.py  risk_manager.py  strategist.py
inkcliq/backtest/: engine.py
inkcliq/config/: __init__.py  secrets.py  settings.py
inkcliq/core/: bus.py  embeddings.py  error_reporter.py  graph.py  llm.py  observability.py  schemas.py  ulid.py
inkcliq/dashboard/: app.py
inkcliq/execution/: bybit_client.py  universe.py
inkcliq/hitl/: approval_store.py  telegram_bot.py
inkcliq/oracle/: backfill.py  impact_metrics.py  price_oracle.py  symbol_mapping.py
plata/: __init__.py  cli.py  entrypoints.py
plata/agents/: base.py  calibrator.py  council.py  executor.py  graph_ingestion.py  historian.py  improver.py  orchestrator.py  position_monitor.py  postmortem.py  researcher.py  reviewer.py  risk_manager.py  self_improver.py  strategist.py  sysop.py
plata/backtest/: engine.py  report.py
plata/config/: __init__.py  credentials.py  secrets.py  settings.py
plata/core/: bus.py  embeddings.py  entity_aliases.py  error_reporter.py  graph.py  llm.py  observability.py  proposals.py  schemas.py
plata/dashboard/: __init__.py  _today_floor.py  app.py  auth.py  push.py  risk_field_meta.py
plata/execution/: alpaca_client.py  bybit_client.py  market_hours.py  router.py  trade_sampler.py  universe.py
plata/hitl/: approval_store.py  telegram_bot.py
scripts/: bootstrap_historian.py  generate_vapid.py  run_backtest.py
(+104 files in other folders)
