[project]
name = "inkcliq"
version = "0.1.0"
description = "Multi-agent autonomous trading system with knowledge-graph reasoning"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Async + HTTP
    "httpx>=0.27",
    "aiohttp>=3.10",
    "anyio>=4.4",
    "tenacity>=9.0",
    "apscheduler>=3.10",

    # Redis Stack
    "redis[hiredis]>=5.1",

    # Postgres
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # LLM / embeddings / observability
    "openai>=1.50",
    "voyageai>=0.3",
    "langfuse>=2.50",
    "structlog>=24.4",

    # Schemas / config
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-ulid>=3.0",

    # Trading
    "ccxt>=4.4",

    # Scraper sources
    "asyncpraw>=7.7",          # Reddit
    "feedparser>=6.0",         # RSS fallback for some sources

    # HITL + dashboard
    "python-telegram-bot[ext]>=21.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "itsdangerous>=2.2",

    # CLI
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "testcontainers[redis,postgres]>=4.8",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]

[project.scripts]
inkcliq = "inkcliq.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inkcliq"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
